add more description at swag
